--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.27.1",
-    "webpack-dev-server": "^3.1.10"
+    "url-loader": "^1.1.2"
   },
   "name": "ripple",
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "webpack-cli": "^3.1.2"
+    "express": "^4.16.4",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "scripts": {
+    "start": "node server.js",
+    "heroku-postbuild": "webpack -p",
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
