--- a/package.json
+++ b/package.json
@@ -2,23 +2,27 @@
   "dependencies": {
     "autoprefixer": "^9.4.2",
     "bootstrap": "^4.1.3",
-    "css-loader": "^2.0.1",
-    "exports-loader": "^0.7.0",
-    "file-loader": "^2.0.0",
+    "express": "^4.16.4",
     "jquery": "^3.3.1",
     "node-sass": "^4.11.0",
-    "popper.js": "^1.14.6",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "url-loader": "^1.1.2"
+    "popper.js": "^1.14.6"
   },
   "name": "ripple",
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "express": "^4.16.4",
-    "webpack": "^4.27.1",
+    "cache-loader": "^1.2.5",
+    "css-loader": "^2.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^2.0.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^3.0.0",
+    "raw-loader": "^1.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^3.1.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
